# cw-ics721-callback-example

./: .gitignore  Cargo.toml  README.md  build.sh
contracts/arkite-passport/: Cargo.toml
contracts/arkite-passport/src/: error.rs  execute.rs  lib.rs  msg.rs  state.rs
contracts/arkite-passport/src/testing/: integration_tests.rs
contracts/cw-ics721-arkite-passport/: Cargo.toml
contracts/cw-ics721-arkite-passport/schema/: cw-ics721-arkite-passport.json
contracts/cw-ics721-arkite-passport/src/: error.rs  execute.rs  lib.rs  msg.rs  state.rs
contracts/cw-ics721-arkite-passport/src/testing/: integration_tests.rs
relayer/cosmos/config/: config.yaml
relayer/hermes/: config.toml
scripts/: SETUP.md  arkite.mnemonic  cw721_base.wasm  cw_ics721_arkite_passport.wasm  cw_ics721_outgoing_proxy_base.wasm  ics721_base.wasm  instantiate-arkite-passport.sh  migrate-arkite-passport.sh  migrate-cw721-creator.sh  migrate-ics721.sh  mint-and-transfer.sh  mint.sh  osmosis.env  setup-arkite-passport.sh  setup-contracts.sh  setup-counter-party-contracts.sh  setup-proxies.sh  stargaze.env  test.json  transfer.sh  upload-contracts.sh
