[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
authors   = ["Mr T <mr-t@arkprotocol.io>"]
edition    = "2021"
homepage   = "https://arkprotocol.io"
repository = "https://github.com/arkprotocol/cw-ics721-callback-example"
license   = "Apache-2.0"
keywords   = ["cosmos", "cosmwasm"]

[workspace.dependencies]
anyhow = "^1.0"
cosmwasm-std = "^1.5"
cosmwasm-schema = "^1.5"
cosmwasm-storage = "^1.5"
cw-ownable      = "^0.5"
cw-paginate-storage = { version = "^2.4", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cw-storage-plus = "^1.1"
cw2 = "^1.1"
cw721 = { git = "https://github.com/arkprotocol/cw-nfts", branch = "collection-info"} # TODO switch to official repo (https://github.com/CosmWasm/cw-nfts) and version 0.19.0, once released
cw721-base = { git = "https://github.com/arkprotocol/cw-nfts", branch = "collection-info"} # TODO switch to official repo (https://github.com/CosmWasm/cw-nfts) and version 0.19.0, once released
ics721 = { git = "https://github.com/public-awesome/cw-ics721", tag = "v0.1.8"}
ics721-base = { git = "https://github.com/public-awesome/cw-ics721", tag = "v0.1.8"}
cw-ics721-incoming-proxy = { git = "https://github.com/arkprotocol/cw-ics721-proxy.git", tag = "v0.1.0" }
cw-ics721-incoming-proxy-base = { git = "https://github.com/arkprotocol/cw-ics721-proxy.git", tag = "v0.1.0" }
cw-ics721-outgoing-proxy-rate-limit = { git = "https://github.com/arkprotocol/cw-ics721-proxy.git", tag = "v0.1.0" }
cw-cii = { git = "https://github.com/public-awesome/cw-ics721", tag = "v0.1.8"}
cw-multi-test = { version = "^0.20", features = ["cosmwasm_1_2"] }
cw-rate-limiter = { git = "https://github.com/arkprotocol/cw-ics721-proxy.git", tag = "v0.1.1" }
cw-utils = "0.13.4"
sha2 = "^0.10"
serde = "^1.0"
thiserror = "^1.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true
