[package]
name = "arkite-passport"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
ics721 = { workspace = true }
cw-cii = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
